--- a/templates/main.html
+++ b/templates/main.html
@@ -685,19 +685,22 @@ and Electron <script>document.write(process.versions.electron)</script>.
 
     });
 
-	window.addEventListener('load', function(){
-		readFile("C:\\Users\\mabuhassan\\Desktop\\Hack\\test\\H-IDE\\ide2\\initial.txt");
+    window.addEventListener('load', function () {
+        var folderName = "./";
+        readFile('./initial.txt');
 
-                var folderName = "C:\\Users\\mabuhassan\\Desktop\\Hack\\test\\H-IDE";
-                var treeData = dirTree(folderName);
+        var treeData = dirTree(folderName);
 
-                $('.tree-wrapper').empty();
-                $('.tree-wrapper').append('<ul class="ztree"></ul>');
-
-console.log("$.fn.zTree.init", $.fn.zTree.init);
-                zTreeObj = $.fn.zTree.init($('.tree-wrapper ul'), {}, treeData.children);
-		
-	}, false )
+        zTreeObj = $.fn.zTree.init($('.tree-wrapper ul'), {
+            callback: {
+                onMouseUp: function (p1, p2, p3) {
+                    if (p3 && p3.type == 'file') {
+                        readFile('./' + p3.path);
+                    }
+                }
+            }
+        }, treeData.children);
+    }, false)
 
 </script>
 </body>
