--- a/templates/main.html
+++ b/templates/main.html
@@ -90,7 +90,14 @@ and Electron <script>document.write(process.versions.electron)</script>.
             <ul class="tabs-nav"></ul>
         </div>
     </div>
-	<div id="debug-area"></div>
+	<div id="debug-area">
+		<ul class="haya">
+			<li><a href="#breakpoint">Breakpoints</a></li>
+			<li><a href="#console">Console</a></li>
+			<li><a href="#debug">Debug</a></li>
+		</ul>
+	
+	</div>
 </div>
 
 <script>
@@ -685,7 +692,7 @@ and Electron <script>document.write(process.versions.electron)</script>.
 
     });
 
-	window.addEventListener('load', function(){
+	/*window.addEventListener('load', function(){
 		readFile("C:\\Users\\mabuhassan\\Desktop\\Hack\\test\\H-IDE\\ide2\\initial.txt");
 
                 var folderName = "C:\\Users\\mabuhassan\\Desktop\\Hack\\test\\H-IDE";
@@ -697,7 +704,8 @@ and Electron <script>document.write(process.versions.electron)</script>.
 console.log("$.fn.zTree.init", $.fn.zTree.init);
                 zTreeObj = $.fn.zTree.init($('.tree-wrapper ul'), {}, treeData.children);
 		
-	}, false )
+	}, false )*/
+
 
 </script>
 </body>
