--- a/css/main.css
+++ b/css/main.css
@@ -151,14 +151,15 @@
 
 .tree-menu
 {
-    height: 30px;
+    height: 27px;
     background-color: gainsboro;
-    border: 1px solid grey;
+    border: 1px solid #d6d6d6;
     padding-left: 5px;
-    font-size: 17px;
+    font-size: 12px;
     font-style: normal;
-	line-height: 25px;
-	
+    line-height: 27px;
+    text-transform: uppercase;
+    font-family: Verdana, Arial, Helvetica, AppleGothic, sans-serif;
 }
 
 #tree
@@ -197,6 +198,8 @@ ul.haya li a {
     text-decoration: none;
 	background-color: gainsboro;
     block-size: 5px;
+    font-size: 12px;
+    font-family: Verdana, Arial, Helvetica, AppleGothic, sans-serif;
 }
 
 ul.haya li a:hover {
